service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: app
spec:
  selector:
    app: sample-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
